k3s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-deployment
  labels:
    app: movie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie
  template:
    metadata:
      labels:
        app: movie
    spec:
      containers:
        - name: movie-container
          image: mohamedmahmoud64/movie_website:latest
          ports:
            - containerPort: 5000
