k3s/albservice.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-nodeport
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80           # الخدمة تعرض بورت 80 داخل الكلاستر
      targetPort: 8000   # ودي البورت اللي Traefik مسموع عليه في البود
      nodePort: 30080    # بورت الدخول من خارج الكلاستر
