k3s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  labels:
    app: movie
spec:
  selector:
    app: movie
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
